更新殼層指令

--- a/1007.md
+++ b/1007.md
@@ -2,8 +2,9 @@
 ### 問題
 1. 都是子目錄為甚麼有時候是一般folder有時候又稱為repo ?
     hint: 
-    - 隱藏檔案 
-    - 在一般的子目錄下GIT指令會怎樣
+    - 隱藏檔案  check
+    - 在一般的子目錄下GIT指令會怎樣 check
+    - 答案:差別在隱藏目錄`.git`
 
 1. 問題:我的虛擬機上沒有我要的檔案,怎樣上傳? check
 
