--- a/1007.md
+++ b/1007.md
@@ -10,5 +10,19 @@
 
 ### 練習
 1. 多人專案,發生衝突的解決
-1. 複製別人的repo 練習殼層指令
+1. 複製別人的repo 順便練習殼層指令
+  - 先在github上建立自己的repo 例如 u777
+  - 進入codespaces
+  - 在終端機中`cd ..`
+  - `git clone https://github.com/airbone4/hw0930.git`
+    - 此時,有兩個子目錄,一個是`u777`一個是`hw0930`
+  - `cd hw0930`
+  - `rm -rf .git` 刪除.git這個子目錄
+  - `cd ..`
+  - `cp hw0930/* u777` 
+    此時已完整複製所有對方的檔案到自己的工作區
+  - `git addd .`
+  - `git commit -m "任何訊息"`
+  - `git push`   
+
 1. 利用ai 整理Readme.md
