--- a/1007.md
+++ b/1007.md
@@ -9,7 +9,7 @@
 1. 問題:我的虛擬機上沒有我要的檔案,怎樣上傳? check
 
 ### 練習
-1. 多人專案,發生衝突的解決
+1. 多人專案,發生衝突的解決 (not yet💖)
 1. 複製別人的repo 順便練習殼層指令
   - 先在github上建立自己的repo 例如 u777
   - 進入codespaces
