--- a/1007.md
+++ b/1007.md
@@ -21,7 +21,7 @@
   - `cd ..`
   - `cp hw0930/* u777` 
     此時已完整複製所有對方的檔案到自己的工作區
-  - `git addd .`
+  - `git add .`
   - `git commit -m "任何訊息"`
   - `git push`   
 
