--- a/log_10_21.md
+++ b/log_10_21.md
@@ -12,3 +12,16 @@ def hello():
 if __name__ == '__main__':
     app.run(host='0.0.0.0', port=5000)
 ```
+
+打開上次留下來的虛擬機,發現不同步
+執行指令
+```
+git pull
+```
+複習
+如果在虛擬機中修改檔案,則要推到github 上的repo 指令是
+```
+git add .
+git commit -m "update"
+git push
+```
