--- a/log_10_21.md
+++ b/log_10_21.md
@@ -25,3 +25,33 @@ git add .
 git commit -m "update"
 git push
 ```
+
+AI超過額度,跑到另一個帳號
+執行`python server.py`發生錯誤 看訊息知道少了程式庫flask
+```
+pip install flask
+```
+
+💖跟AI講
+```
+在server.py中新增一個entry 可以指向static目錄中的檔案index.html
+```
+然後執行
+```
+python server.py
+```
+在瀏覽器打開,發生錯誤 因為我還沒建立`static/index.html`
+ 
+💖又跟AI說
+```
+幫我寫一個index.html的範例
+```
+完成。
+
+
+剛剛ai幫我產生的index.html, 我不要.剛剛的目的只是要他完成目錄結構
+/server.py
+|
+|+---static
+       +
+       ------ index.html
