--- a/log_10_21.md
+++ b/log_10_21.md
@@ -49,9 +49,11 @@ python server.py
 完成。
 
 
-剛剛ai幫我產生的index.html, 我不要.剛剛的目的只是要他完成目錄結構
+剛剛ai幫我產生的index.html, 我不要那個DEMO.目的只是要他完成目錄結構,如下
+```
 /server.py
 |
 |+---static
        +
        ------ index.html
+```
