--- a/log_10_21.md
+++ b/log_10_21.md
@@ -57,3 +57,6 @@ python server.py
        +
        ------ index.html
 ```
+
+然後要求ai 把日誌`log_10_21.md` 轉成 html 檔案
+然後把產生的html 檔案 改成 index.html 搬到static下面
