Convert log_10_21.md to HTML and move to static
Converted log_10_21.md to HTML and moved to static.

--- a/log_10_21.md
+++ b/log_10_21.md
@@ -58,5 +58,6 @@ python server.py
        ------ index.html
 ```
 
-然後要求ai 把日誌`log_10_21.md` 轉成 html 檔案
-然後把產生的html 檔案 改成 index.html 搬到static下面
+1. 要求ai 把日誌`log_10_21.md` 轉成 html 檔案
+1. 把上面步驟產生的html 檔案 改成 index.html 搬到static下面
+2. 重新執行 `python server.py`
