--- a/log_10_21.md
+++ b/log_10_21.md
@@ -49,9 +49,13 @@ python server.py
 完成。
 
 
-剛剛ai幫我產生的index.html, 我不要.剛剛的目的只是要他完成目錄結構
+剛剛ai幫我產生的index.html, 我不要.剛剛的目的只是要他完成目錄結構  這個index.html必須放在static子目錄中
+```
 /server.py
 |
 |+---static
        +
        ------ index.html
+```
+
+💖幫我把log_10_21.md翻譯成index.html
