--- a/log_10_21.md
+++ b/log_10_21.md
@@ -57,5 +57,7 @@ python server.py
        +
        ------ index.html
 ```
-
-💖幫我把log_10_21.md翻譯成index.html
+💖跟AI講
+```
+幫我把log_10_21.md翻譯成index.html
+```
