--- a/log_12_2.md
+++ b/log_12_2.md
@@ -73,5 +73,38 @@ let 的生命範圍是block ,但是var 的生命範圍 不是block 而是函數b
 		}        
 
 		sayHello('hello ') //調用函數sayHello
-```     
+``` 
 
+加總函數
+
+```js
+function sum(x,y){
+    return x+y
+}
+let y=sum(5,6)
+```
+
+範例
+```js
+function xxx() {
+    return "你好" 
+}
+```
+
+函數的另一種寫法(對照上面):
+```
+const xxx=()=>{
+    return "你好" 
+}
+```
+
+我們公司統一規定,冪次方的函數定義為power(x,y)
+
+```js
+function power (x,y) {
+    return Math.pow(x,y)
+}
+
+console.log(power(5,3)) //主控台出現125 excel 中的寫法是:5^3
+
+```
